src/test/ui/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
error[E0277]: the trait bound `(): ~const Tr` is not satisfied
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:8:9
   |
LL |         ().a()
   |         ^^ - required by a bound introduced by this call
   |         |
   |         the trait `~const Tr` is not implemented for `()`
   |
note: the trait `Tr` is implemented for `()`, but that implementation is not `const`
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:8:9
   |
LL |         ().a()
   |         ^^
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | pub trait Tr where (): ~const Tr {
   |              +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
